fix: prevent input element from overflow

--- a/src/style.css
+++ b/src/style.css
@@ -73,6 +73,7 @@
 
 * {
   margin: 0;
+  box-sizing: border-box;
   font: inherit;
 }
 
@@ -116,6 +117,7 @@ main {
 }
 
 .weather input[type="search"] {
+  min-width: 0;
   flex-grow: 1;
   border-start-start-radius: var(--br-400);
   border-end-start-radius: var(--br-400);
